--- a/pshipment/src/main/resources/application.properties
+++ b/pshipment/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 
+
+#port 
+server.port =8080
+# Database
+spring.datasource.driver = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/priorshipment
+spring.datasource.username = root
+spring.datasource.password = 
+spring.security.user.password=Test12345_
+# Log JPA queries
+# Comment this in production
+spring.jpa.show-sql = true
+# Drop and create new tables (create, create-drop, validate, update)
+# Only for testing purpose - comment this in production
+spring.jpa.hibernate.ddl-auto = update
+# Hibernate SQL dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+server.error.include-message= always
+logging.level.org.hibernate.SQL =DEBUG
+logging.level.org.hibernate.type =TRACE
+
