--- a/pshipment/src/main/resources/application.properties
+++ b/pshipment/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 server.port =8080
 # Database
 spring.datasource.driver = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/priorshipment
+spring.datasource.url = jdbc:mysql://localhost:3306/priorshipmentsecurity
 spring.datasource.username = root
 spring.datasource.password = 
 spring.security.user.password=Test12345_
