--- a/pshipment/src/main/resources/application.properties
+++ b/pshipment/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 
 
 #port 
-server.port =8080
+server.port =8089
 # Database
 spring.datasource.driver = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/priorshipmentsecurity
 spring.datasource.username = root
-spring.datasource.password = 
-spring.security.user.password=Test12345_
+spring.datasource.password = admin123
 # Log JPA queries
 # Comment this in production
 spring.jpa.show-sql = true
@@ -19,4 +18,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 server.error.include-message= always
 logging.level.org.hibernate.SQL =DEBUG
 logging.level.org.hibernate.type =TRACE
-
+ spring.security.user.name= customer
+ spring.security.user.password=Test12345
+grokonez.app.jwtSecret=jwtGrokonezSecretKey
+grokonez.app.jwtExpiration=86400
